--- a/recipes/test.html
+++ b/recipes/test.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Doosan recipe</h1>
-    <img src="../images/doosan.jpg" alt="Image of a Doosan roobot" width="150">           
+    <img src="../images/doosan.jpg" alt="Image of a Doosan cobot" width="150">           
 </body>
 </html>
